--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@ const { active } = Astro.props;
       </a>
     </div>
     <div class="flex gap-x-10">
-      <HeaderLink
+      <!-- <HeaderLink
         href={BASE + "/"}
         active={active === "blog"}
         class="text-sm font-semibold leading-6">Blog</HeaderLink
@@ -46,11 +46,11 @@ const { active } = Astro.props;
         href={BASE + "/about"}
         active={active === "about"}
         class="text-sm font-semibold leading-6">About</HeaderLink
-      >
+      > -->
 
       {MANUAL_DARK_MODE ? <ThemeToggle /> : null}
 
-      {SEARCH_ENABLED ? <Search client:visible /> : null}
+      <!-- {SEARCH_ENABLED ? <Search client:visible /> : null} -->
     </div>
   </nav>
 </header>
