--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -50,3 +50,4 @@ const { title, description, image = "main.png" } = Astro.props;
   property="twitter:image"
   content={new URL(BASE + "/open-graph/" + image, Astro.url)}
 />
+<script src="https://mozilla.github.io/pdf.js/build/pdf.mjs" type="module"></script>
