--- a/src/layouts/RagTemplate.astro
+++ b/src/layouts/RagTemplate.astro
@@ -15,6 +15,8 @@ import Chatbot from "$components/Chatbot.svelte";
 import fs from 'fs';
 import path from 'path';
 
+const { active = "home" } = Astro.props;
+
 /**
  * Liste récursivement tous les PDF dans un dossier donné.
  * @param {string} dir - Dossier à parcourir
@@ -87,7 +89,7 @@ const stack = [
 ---
 
 <BaseLayout title={SITE_TITLE} description={SITE_DESCRIPTION}>
-  <Header active="blog" />
+  <Header active={active} />
   <main class="max-w-2xl lg:max-w-3xl mx-auto mt-8 px-4">
 
     <div class="my-14 space-y-16 max-w-3xl">
@@ -98,7 +100,7 @@ const stack = [
      
     </div>
 
-    <section class="my-14 space-y-8">
+    <!-- <section class="my-14 space-y-8">
       
       <div>
         <h2 class="text-2xl font-semibold mb-4">Upload de documents</h2>
@@ -121,7 +123,7 @@ const stack = [
         <DocumentList documents={pdfDocuments} client:only="svelte" />
        
       </div>
-    </section>
+    </section> -->
 
     <!-- Tech Stack Section -->
     <section class="animate">
