--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,5 +9,5 @@ import RagTemplate from "$layouts/RagTemplate.astro";
 <!-- <PostList {posts} totalPages={total} currentPage={1} showFeatured>
   <h1>Latest blog posts</h1>
 </PostList> -->
-<RagTemplate />
+<RagTemplate active="home" />
 
