--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,55 +7,23 @@ import {
   SITE_TITLE,
   SHOW_FAVICON_IN_HEADER,
 } from "../config.ts";
+import Navbar from "./Navbar.svelte";
 import ThemeToggle from "./ThemeToggle.astro";
-import HeaderLink from "./HeaderLink.astro";
 import CodeCopyButton from "./CodeCopyButton.astro";
-
 
 const { active } = Astro.props;
 ---
 
-<header>
-  <nav
-    class="flex items-center justify-between p-6 lg:px-8"
-    aria-label="Global"
-  >
-    <div class="flex lg:flex-1">
-      <a href={BASE + "/"} class="p-1.5">
-        <span class="sr-only">go to home</span>
+<Navbar 
+  client:load 
+  active={active} 
+  base={BASE}
+  siteName={SITE_NAME || SITE_TITLE}
+  showFavicon={SHOW_FAVICON_IN_HEADER}
+  siteFavicon={SITE_FAVICON}
+  manualDarkMode={MANUAL_DARK_MODE}
+>
+  <ThemeToggle slot="theme-toggle" />
+</Navbar>
 
-        <div class="text-3xl flex items-center gap-x-2">
-          {SHOW_FAVICON_IN_HEADER ? SITE_FAVICON : null}
-          <span
-            class="hidden md:block font-bold text-base text-base-950 dark:text-base-50"
-            >{SITE_NAME || SITE_TITLE}</span
-          >
-        </div>
-      </a>
-    </div>
-    <div class="flex gap-x-10">
-      <HeaderLink
-        href={BASE + "/"}
-        active={active === "home"}
-        class="text-sm font-semibold leading-6">Accueil</HeaderLink
-      >
-      <HeaderLink
-        href={BASE + "/about"}
-        active={active === "about"}
-        class="text-sm font-semibold leading-6">À propos</HeaderLink
-      >
-      <HeaderLink
-        href={BASE + "/documents"}
-        active={active === "documents"}
-        class="text-sm font-semibold leading-6">Documents</HeaderLink
-      >
-
-      {MANUAL_DARK_MODE ? <ThemeToggle /> : null}
-
-      <!-- {SEARCH_ENABLED ? <Search client:visible /> : null} -->
-    </div>
-  </nav>
-</header>
-
-<!-- <CommandPalette client:load /> -->
 <CodeCopyButton />
