--- a/src/layouts/RagTemplate.astro
+++ b/src/layouts/RagTemplate.astro
@@ -73,6 +73,7 @@ const stack = [
 
     <div class="my-14 space-y-16 max-w-3xl">
       <div class="mt-12">
+        <h2 class="text-2xl font-semibold mb-4">Example abandonné avec un LLM</h2>
         <Chatbot client:only="svelte" />
       </div>
      
